develop: refactor finish
