# backend/handlers/routes.go
@@ -7,16 +7,12 @@ import (
 func (handle *Handle) RegisterRoutes(r *gin.Engine) {
 	api := r.Group("/api")
 	{
-		api.GET("/folder-structure", handle.FolderStructureHandler)
 		api.GET("/getJobs", handle.GetJobs)
-		api.GET("/getDatasets", handle.GetDatasets)
-		api.GET("/getImages", handle.GetImages)
-		api.GET("/getBase64Images", handle.GetBase64Images)
-		api.GET("/getAllPages", handle.GetAllPages)
-		
+		api.GET("/setAllPages", handle.SetAllPageDetails)
+		api.GET("/getAllPages", handle.GetAllPageDetails)
+		api.GET("/getBase64Images", handle.GetBase64ImageByPageIndex)
+
 		api.POST("/savePendingReview", handle.SavePendingReview)
 		api.GET("/getPendingReview", handle.GetPendingReview)
-		api.POST("/approvedRemove", handle.ApprovedRemove)
-		api.POST("/unapprovedRemove", handle.UnApprovedRemove)
 	}
 }
